--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/hexagun/frontend/issues"
   },
-  "homepage": "https://github.com/hexagun/frontend#readme"
+  "homepage": "https://github.com/hexagun/frontend#readme",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
