--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "React frontend serve with webpack",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --open",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
