--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open",
+    "serve": "webpack serve --config ./webpack.config.js --progress",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,13 +21,16 @@
   },
   "homepage": "https://github.com/hexagun/frontend#readme",
   "dependencies": {
+    "@react-three/fiber": "^8.16.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.2",
     "@babel/preset-react": "^7.24.7",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.93.0",
