--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/hexagun/frontend#readme",
   "dependencies": {
     "@react-three/fiber": "^8.16.8",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.167.1"
