--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   "homepage": "https://github.com/hexagun/frontend#readme",
   "dependencies": {
     "@react-three/fiber": "^8.16.8",
+    "@redux-devtools/extension": "^3.3.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
