--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/hexagun/frontend#readme",
   "dependencies": {
     "@react-three/fiber": "^8.16.8",
+    "@react-three/uikit": "^0.4.4",
     "@redux-devtools/extension": "^3.3.0",
+    "@types/three": "^0.167.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
